# bstring

./: .travis.yml  Makefile.am  additions.c  additions.h  b_list.c  bstrlib.c  configure.ac  defines.h  private.h
bstring/: additions.c  additions.h  bstraux.c  bstraux.h  bstring.h  bstrlib.c  bstrlib.h  defines.h  private.h
package/: Makefile.am  configure.ac
src/: additions.c  additions.h  bstring.h  bstrlib.c
tests/: bstest.c  testaux.c
